--- a/sb-config.org
+++ b/sb-config.org
@@ -81,6 +81,7 @@ The solution that I adopted is to use =guit-gui--askpass=, even if it does not i
 
 * AUCTeX and RefTeX
   :LOGBOOK:
+  CLOCK: [2016-06-02 Thu 07:20]--[2016-06-02 Thu 09:00] =>  1:40
   CLOCK: [2016-05-25 Wed 08:10]--[2016-05-25 Wed 08:50] =>  0:40
   CLOCK: [2016-05-24 Tue 08:00]--[2016-05-24 Tue 09:30] =>  1:30
   CLOCK: [2016-05-02 Mon 08:30]--[2016-05-02 Mon 09:10] =>  0:40
@@ -195,6 +196,17 @@ We define some variables which can be custom-set
 We use a custom =:set= function for the =sb-TeX-pdf-viewer-options= variable, in order to update =TeX-view-program-list=, which depends on it.
 
 #+BEGIN_SRC emacs-lisp
+  (defun sb-set-TeX-pdf-viewer-options (symbol value)
+    "The function to be called when modifying `sb-TeX-pdf-viewer-options'
+  when using the Customize user interface. This setter updates
+  `TeX-view-program-list', taking care of duplicate entries."
+    (progn (setq TeX-view-program-list
+                 (cons (list "SB PDF viewer" (concat "%(sb-pdf-viewer) " value))
+                       (cl-remove "SB PDF viewer" TeX-view-program-list
+                                  :test (lambda (left right)
+                                          (equal left (car right))))))
+           (set-default symbol value)))
+
   (defcustom sb-TeX-pdf-viewer-options ""
     "Command line options to be passed to the TeX-view command.
   For SumatraPDF (Windows platforms), set this variable to
@@ -208,18 +220,11 @@ We use a custom =:set= function for the =sb-TeX-pdf-viewer-options= variable, in
     :type 'string
     :group 'sb
     :tag "TeX PDF viewer options"
-    :set (lambda (symbol value)
-           (progn (add-to-list 'TeX-view-program-list
-                               `("PDF viewer" ,(concat "%(pdf-viewer) " value)))
-                  (set-default symbol value))))
-#+END_SRC
+    :set 'sb-set-TeX-pdf-viewer-options)
 
-The above piece of code will generated multiple "PDF viewer" entries in the =TeX-view-program-list=. Also, the =:set= function must be documented.
-
-#+BEGIN_SRC emacs-lisp
   (add-to-list 'TeX-expand-list
-               '("%(pdf-viewer)" (lambda () (format sb-TeX-pdf-viewer-command))))
-  (setq TeX-view-program-selection '((output-pdf "PDF viewer")))
+               '("%(sb-pdf-viewer)" (lambda () (format sb-TeX-pdf-viewer-command))))
+  (setq TeX-view-program-selection '((output-pdf "SB PDF viewer")))
 #+END_SRC
 
 ** RefTeX
