--- a/sb-config.org
+++ b/sb-config.org
@@ -94,7 +94,7 @@ We first define a hydra to insert Greek chars
 
 #+BEGIN_SRC emacs-lisp :results none
   (defhydra sb-hydra-insert-char-greek (:columns 8 :foreign-keys run)
-    " "
+    "Insert Greek char"
     ("A" (insert-char #x0391) "Α")
     ("B" (insert-char #x0392) "Β")
     ("G" (insert-char #x0393) "Γ")
@@ -143,7 +143,8 @@ We first define a hydra to insert Greek chars
     ("f" (insert-char #x03C6) "φ")
     ("c" (insert-char #x03C7) "χ")
     ("j" (insert-char #x03C8) "ψ")
-    ("w" (insert-char #x03C9) "ω"))
+    ("w" (insert-char #x03C9) "ω")
+    ("C-g" nil "quit"))
 #+END_SRC
 
 Which is bound to =C-c 8=
